--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "axios": "^1.7.7",
     "cookie-parser": "^1.4.7",
     "crypter": "^0.2.2",
+    "cryptr": "^6.3.0",
     "express": "^4.21.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.14"
   }
 }
