--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
+    "chalk": "^5.3.0",
     "cookie-parser": "^1.4.7",
     "crypter": "^0.2.2",
     "cryptr": "^6.3.0",
