add filterbyseverity and labels cmps

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cookie-parser": "^1.4.7",
     "crypter": "^0.2.2",
     "cryptr": "^6.3.0",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.14"
